# AIML-Template

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml  skills_taxonomy.json
notebooks/: ResumeRank.ipynb
src/: api.py  main.py
src/features/: __init__.py  contact_extractor.py  education_extractor.py  experience_extractor.py  skills_extractor.py
src/parser/: __init__.py  docx_parser.py  pdf_parser.py  text_cleaner.py
src/ranking/: __init__.py  ranker.py  scorer.py
src/similarity/: embedding_matcher.py  hybrid_scorer.py  tfidf_matcher.py
src/ui/: gradio_app.py
src/utils/: io.py
tests/: test_features.py  test_parser.py  test_similarity.py
